<resources>
    <string name="app_name">TraderX</string>

    <!--    Titles-->
    <string name="title_signup">Create a New Account</string>
    <string name="title_login">Login into Your Account</string>
    <string name="title_news">News</string>
    <string name="title_home">Home</string>
    <string name="title_trader_equipment">Equipments</string>
    <string name="title_equipment_types">Equipment Types</string>
    <string name="title_profile">Profile</string>
    <string name="title_user_edit">Edit Profile</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_my_transactions">My Transactions</string>
    <string name="title_my_portfolio">My Portfolio</string>
    <string name="title_articles">Articles</string>
    <string name="title_my_articles">My Articles</string>
    <string name="title_events">Events</string>
    <string name="title_my_predictions">My Predictions</string>
    <string name="title_predictions">Predictions</string>

    <string name="welcome_back">Welcome Back</string>
    <!--    Fields-->
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="password_again">Repeat Password</string>

    <!--    Words-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="signout">Sign Out</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_pass">Forgot Password</string>d
    <string name="general_false">No</string>
    <string name="general_true">Yes</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="pending">Pending</string>
    <string name="article">Article</string>
    <string name="keywords">Keywords</string>
    <string name="title">Title</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="following_users">Following Users</string>
    <string name="pending_following_requests">Pending Following Requests</string>
    <string name="profile">Profile</string>
    <string name="sprivate">Private</string>
    <string name="spublic">Public</string>
    <string name="currencies">Currencies</string>
    <string name="crypto_currencies">Crypto Currencies</string>
    <string name="stocks">Stocks</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="above">Above</string>
    <string name="below">Below</string>
    <string name="equipment">Equipment</string>
    <string name="alert">Alert</string>
    <string name="my_alerts">My Alerts</string>
    <string name="limit">Limit</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="alert_type">Alert Type</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="annotate">Annotate</string>
    <string name="tags">Tags</string>
    <string name="tags_diff">Tags: </string>
    <string name="importance">Importance</string>
    <string name="country">Country</string>
    <string name="event">Event</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="user">User</string>

    <!--    Actions-->
    <string name="become_trader">Become a Trader</string>
    <string name="enter_iban_for_trader">Enter Your IBAN to Become Trader</string>
    <string name="create_alert">Create Alert</string>
    <string name="alert_create_success">Alert is created successfully</string>
    <string name="alert_delete_success">Alert is deleted successfully</string>
    <string name="create_comment">Create a comment</string>
    <string name="comment_create_success">Comment is created successfully</string>
    <string name="comment_edit_success">Comment is edited successfully</string>
    <string name="comment_delete_success">Comment is deleted successfully</string>
    <string name="comment_revoke">Comment vote is revoked successfully</string>
    <string name="comment_dislike">Comment is disliked</string>
    <string name="comment_like">Comment is liked</string>
    <string name="comment_already_voted">Comment is already liked or disliked</string>
    <string name="article_delete_success">Article is successfully deleted</string>
    <string name="annotation_create_success">Annotation is successfully created</string>
    <string name="annotation_delete_success">Annotation is successfully deleted</string>
    <string name="add_image_gallery">Add Image From Gallery </string>
    <string name="make_prediction">Make a Prediction</string>
    <string name="make_prediction_success">Your prediction is successfully received</string>
    <string name="make_prediction_already_error">You have already a prediction about this Equipment</string>

    <string name="article_create">Article Create</string>
    <string name="article_edit">Article Edit</string>

    <!--    Symbols-->
    <string name="try_value">₺ %.4f</string>
    <string name="eur_value">€ %.4f</string>
    <string name="usd_value">$ %.4f</string>

    <!--    Annotation-->
    <string name="annotation_not_valid_text">Your annotation is not valid</string>
    <!--    Article-->
    <string name="article_header_error">Header is not valid</string>
    <string name="article_body_error">Body is not valid</string>
    <string name="article_tags_error">Tags is not valid</string>
    <string name="article_image_error">Image is not valid</string>
    <!--    Alert-->
    <string name="amount_or_limit_empty">Amount or Limit is empty</string>
    <string name="alert_phrase">%1$s when %2$s %3$s$ than %4$s</string>

    <!--    Transaction-->
    <string name="min_transaction_error">You should specify an amount bigger than 0</string>
    <string name="not_enough_deposit">You do not have enough deposit to buy</string>
    <string name="transaction_succes">Transaction is successfully completed</string>
    <!--    Follow-->
    <string name="follow_requested">Follow request is sent to %1$s.</string>
    <string name="follow_success">You are following %1$s now</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="request_canceled">Follow request for %1$s is canceled</string>
    <string name="remove_follower">%1$s is not following you now</string>
    <string name="unfollowed">%1$s is unfollowed</string>
    <string name="accept_pending_request">%1$s is now following you</string>
    <string name="decline_pending_request">You declined %1$s follow request</string>

    <string name="not_available">Not Available</string>
    <string name="connecting">Connecting</string>
    <string name="loading">Loading</string>

    <string name="your_phone">Mail</string>
    <string name="accept_terms">Accept Conditions</string>
    <string name="trader_account">Trader Account</string>
    <string name="signup_iban">IBAN (for trader user)</string>
    <string name="title_forgot_password">Reset Password</string>
    <string name="reset_password">Reset Password</string>

    <string name="role">Role</string>
    <string name="role_basic">Basic</string>
    <string name="role_trader">Trader</string>
    <string name="role_admin">Admin</string>
    <string name="profile_private">Private Profile</string>
    <string name="profile_public">Public Profile</string>

    <string name="username_not_valid">Username should be between 5 and 20 characters long</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="pass_not_valid">Password must -include at least a digit, a lower case letter, an uppercase letter, a special char. and not include any whitespaces. Min password length: 8 characters</string>
    <string name="trader_iban_not_valid">You have selected Trader account, however IBAN is not valid</string>
    <string name="pass_match_fail">Passwords doesn\'t match</string>

    <string name="select_county">Select Country</string>
    <string name="select_location">Select your location from map</string>
    <string name="select_town">Select City</string>
    <string name="select_neighbourhood">Select County</string>
    <string name="select_district">Select District</string>

    <string name="signup_success">You have successfully signed up. Please verify your email then sign in</string>


    <string name="fill_empty_areas">Fill empty areas</string>

    <string name="location_not_accessible">Location is not accessible</string>
    <string name="ask_location_activation">Would you like to enable Location Access?</string>
    <string name="restaurant_list_by_location">Accessing to location</string>


    <string name="press_back_quit">Press back again to exit</string>


    <string name="navigation_drawer_open" translatable="false" />
    <string name="navigation_drawer_close" translatable="false" />
    <string name="main_page_logo_desc">Main page logo</string>


    <string name="connection_error">Connection error, check your internet access</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_type">Equipment Type</string>
    <string name="stock">Stock</string>
    <string name="prediction_rate">Prediction Rate</string>
    <string name="history_last_30_days">History - Last 30 days</string>
    <string name="comments">Comments</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="or">or</string>
    <string name="your_deposit">Your Deposit</string>
    <string name="value">Value</string>
    <string name="btc">BTC</string>
    <string name="usd">USD</string>
    <string name="amount_in_usd">Amount in USD</string>
    <string name="base">Base</string>
    <string name="code">Code</string>
    <string name="my_trades">My Trades</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="portfolio">Portfolio</string>

    <string name="delete_portfolio">Portfolio is deleted</string>
    <string name="add">Add</string>
    <string name="portfolio_name">Portfolio Name</string>

</resources>
