<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/dialog_port_name"
        android:hint="@string/portfolio_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/dialog_add_portfolio"
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/dialog_cancel_btn"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
