<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.alert.AlertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="19.3dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="28.8dp">

        <LinearLayout
            android:id="@+id/warning_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#970000"
            android:visibility="gone">

            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/limit"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.3dp"
                android:layout_marginBottom="19.3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_type"
                    android:textColor="@color/txt_color"
                    android:textSize="17.3sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#eff0f4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/buy"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sell" />

                <RadioButton
                    android:id="@+id/buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19.3dp"
                android:layout_marginBottom="19.3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_type"
                    android:textColor="@color/txt_color"
                    android:textSize="17.3sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="#eff0f4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/above"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/above"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/above" />

                <RadioButton
                    android:id="@+id/below"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/below" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="19.3dp"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="#fbfbfb" />
</RelativeLayout>