<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_login"
                        android:textColor="#141a22"
                        android:textSize="19.2sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/welcome_back"
                        android:textColor="#6e7f8d"
                        android:textSize="17.3dp" />
                </LinearLayout>
            </FrameLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_warning_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:background="#970000"
            android:visibility="gone">

            <TextView
                android:id="@+id/login_warning"
                map:layout_constraintBottom_toBottomOf="parent"
                map:layout_constraintEnd_toEndOf="parent"
                map:layout_constraintStart_toStartOf="parent"
                map:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.7dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="28.7dp"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/StyledTilEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28.7dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="28.7dp"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="10dp"

                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Don’t have an account?"
            android:textSize="17.3sp" />

        <TextView
            android:id="@+id/login_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="#006dff"
            android:textSize="17.3sp" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="19.3dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#fbfbfb" />


</RelativeLayout>
